--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ input[type="number"] {
   font-family: "Gilroy Bold";
 }
 
-/*/////////////   DASHBOARD    /////////////*/
+/**************   DASHBOARD    ***********/
 .budget-dashboard {
   display: block;
   width: 360px;
@@ -142,9 +142,9 @@ input[type="number"] {
   margin-left: 20px;
 }
 
-.toggle .expense-list,
-.income-list,
-.all-list {
+.toggle .first-tab,
+.second-tab,
+.third-tab {
   display: inline-block;
   cursor: pointer;
   font-size: 1.1em;
@@ -153,8 +153,8 @@ input[type="number"] {
   opacity: 0.4;
 }
 
-.toggle .income-list,
-.all-list {
+.toggle .second-tab,
+.third-tab {
   margin-left: 10px;
 }
 
