--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ input[type="number"] {
 }
 
 .budget-header .balance {
-  margin-top: 45px;
+  margin-top: 25px;
   margin-left: 20px;
 }
 
@@ -85,7 +85,7 @@ input[type="number"] {
 .budget-header .account {
   display: block;
   width: 310px;
-  margin: 35px auto 0;
+  margin: 25px auto 0;
   line-height: 1.7em;
   text-align: center;
 }
@@ -121,7 +121,7 @@ input[type="number"] {
 .budget-dashboard {
   display: block;
   width: 360px;
-  /* height: 470px; */
+  min-height: 470px;
   background-color: #fff;
   margin-top: 35px;
   border-radius: 30px 30px 0 0;
@@ -283,7 +283,7 @@ input[type="number"] {
 
 .budget-dashboard #expense ul {
   width: 360px;
-  height: 285px;
+  min-height: 285px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -337,7 +337,7 @@ input[type="number"] {
 /* /////// INCOME //////// */
 .budget-dashboard #income {
   width: 360px;
-  height: 339px;
+  min-height: 339px;
   position: relative;
 }
 
