--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ input[type="number"] {
 /* //////// EXPENSE ////////// */
 .budget-dashboard #expense {
   width: 360px;
-  height: auto;
+  min-height: 339px;
   position: relative;
 }
 
